array.island.Island.scala.error
Erreur de compilation :
Island:6: error: type mismatch;
 found   : Boolean(true)
 required: Int
     compteur= true
               ^